# namel3ss-ai-programming-language

./: .coverage  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATING.md  README.md  hatch_build.py  mkdocs.yml  optimizer.db  pyproject.toml  roadmap.md  tmp_check.py  tmp_scan.py
docs/: api-surface.md  architecture.md  diagnostics.md  index.md  language_spec.md  namel3ss_overview.md  namel3ss_v3_overview.md  testing.md
examples/: expressions.ai  golden_examples.json  macro_greet.ai
scripts/: load_test_flows.py  migrate_is_fields.py  migrate_is_syntax.py
studio/: index.html  package.json  vite.config.ts
tests/: conftest.py  test_agent_conditions_english.py  test_agent_engine.py  test_agent_evaluation.py  test_agent_reflection.py  test_agent_runtime.py  test_agent_team_voting.py  test_agent_traces_api.py  test_agent_tracing_metrics.py  test_agent_variables.py  test_agents_debate.py  test_agents_orchestration.py  test_agents_reflection.py  test_ai_provider_http_json.py  test_ai_provider_openai_v2.py  test_ai_provider_routing.py  test_ai_router_multi_provider.py  test_ai_streaming_flag.py  test_ai_system_prompt.py  test_ai_tool_runtime_loop.py  test_ai_tool_specs.py  test_ai_tools_list.py  test_ai_ui_macro.py  test_api_migrate_naming_standard.py  test_app_scaffold_macro.py  test_auth.py  test_azure_provider.py  test_builtins_phase3.py  test_bundler.py  test_cli.py  test_cli_build_simple.py  test_cli_bundle.py  test_cli_create.py  test_cli_desktop.py  test_cli_diagnostics.py  test_cli_examples.py  test_cli_fmt.py  (+188 more)
(+485 files in other folders)
