[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "namel3ss"
version = "0.1.0"
description = "Namel3ss V3 – AI Programming Language"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Namel3ss Team" }
]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "ruff>=0.6.0",
  "isort>=5.13.0",
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "httpx>=0.28.0",
]

[project.scripts]
n3 = "namel3ss.cli:main"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "B"]
ignore = ["B905"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
